fix overflow of conversation name
thanks @sipc

--- a/app/src/assets/home.less
+++ b/app/src/assets/home.less
@@ -11,6 +11,7 @@
 .conversation-name {
   color: hsl(var(--text));
   font-weight: bold !important;
+  word-wrap: anywhere;
 }
 
 .web {
